Correct align-items

--- a/web/themes/custom/sand/sass/5-organisms/_header.scss
+++ b/web/themes/custom/sand/sass/5-organisms/_header.scss
@@ -235,7 +235,6 @@
         }
 
         &.tbm-link.level-1 {
-          align-items: baseline;
           display: block;
           padding: 1em;
         }
